dark mode fix

--- a/src/app.css
+++ b/src/app.css
@@ -12,6 +12,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --accent-color-light:  #eee;
+  --accent-color-dark:   #444;
+
 }
 
 a {
@@ -66,11 +70,28 @@ button:focus-visible {
   :root {
     color: #213547;
     background-color: #ffffff;
+    --accent-color: var(--accent-color-light);
+    --border-color: black;
   }
   a:hover {
     color: #747bff;
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: rgba(255, 255, 255, 1);
+    background-color: #242424;
+    --accent-color: var(--accent-color-dark);
+    --border-color: white;
+  }
+  a:hover {
+    color: #535bf2;
+  }
+  button {
+    background-color: #1a1a1a;
   }
 }
